# biznext-event-tool

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  kafka.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.txt.arm64  x
.github/workflows/: build_image.yaml
k8s/: deployment.yaml  ingress.yaml
k8s/base/: deployment.yaml  kustomization.yaml
k8s/envs/dev2/: istio.yaml  kustomization.yaml
k8s/envs/pie/: ingress.yaml
models/core_helper/: instruction_command_pb2.py  instruction_status_executor_pb2.py  instruction_status_update_pb2.py  invoice_presentment_message_pb2.py  protobuf_decimal_pb2.py
platform/: README.md
platform/debian-aarch64/librdkafka/lib/pkgconfig/: rdkafka-static.pc  rdkafka.pc
protobuf/core_helper/: instruction_command.proto  instruction_status_executor.proto  instruction_status_update.proto  invoice_presentment_message.proto  protobuf_decimal.proto
samples/: instruction.command.json
static/: dummy.json  instruction.status.executor.json  instruction.status.update.json  stream.eipp-engine.presentment.submission.entry.json
templates/: base.html  pub.html  sub.html
tests/: test_app.py  test_bn_event_tool.py  test_kafka.py
